objects/Product_Interest__c.object
<CustomObject>
    <description>To store the list of product in which lead is interested</description>
    <fields>
        <fullName>Book_Ship_Date__c</fullName>
        <description>The book/ship date of the product</description>
        <label>Book/Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>Will show the Business Group of Product</description>
        <formula>TEXT( Product__r.Business_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <description>Will show the GBU of product</description>
        <formula>TEXT( Product__r.GBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Product Interests</relationshipLabel>
        <relationshipName>Leads_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3214</description>
        <formula>Product__r.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Interests</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Gives the quantity of the products</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Product_Line__c</fullName>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3214</description>
        <formula>Product__r.Sub_Product_Line__c</formula>
        <label>Sub Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The unit price of the products</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Product Interest</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Product Interest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Quantity_should_be_greater_than_zero</fullName>
        <active>true</active>
        <description>Quantity should be greater than zero</description>
        <errorConditionFormula>Quantity__c  &lt; 0</errorConditionFormula>
        <errorMessage>Quantity should be greater than zero</errorMessage>
    </validationRules>
</CustomObject>